# ConfCSR

./: LICENSE  README.md  confcsr.cabal
app/: Examples.hs
src/: Arguments.hs  Lib.hs  Util.hs
src/Data/Rewriting/Mu/: CriticalPair.hs  Joinability.hs  ReplacementMap.hs  Rewrite.hs
src/Data/Rewriting/Mu/Problem/: Parse.hs  Type.hs
src/Data/Rewriting/Mu/Processor/: ConfluenceProcessor.hs  EmptyProcessor.hs  OrthogonalityProcessor.hs  RedundancyProcessor.hs  Result.hs  State.hs  Type.hs
src/Data/Rewriting/Mu/Termination/: TerminationTool.hs
test/: SpecUtil.hs
test/Data/Rewriting/Mu/: CriticalPairSpec.hs  JoinabilitySpec.hs  ReplacementMapSpec.hs  RewriteSpec.hs
test/Data/Rewriting/Mu/Problem/: ParseSpec.hs
test/Data/Rewriting/Mu/Processor/: ConfluenceProcessorSpec.hs  OrthogonalityProcessorSpec.hs
